[tool.poetry]
name = "repl-nix-trueentity-api"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_trueentity_api"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
w3storage = "0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
